--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -36,12 +36,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="http://by.kevingailey.com" style="font-color: #6dbac9;">by.KG</a>
+          <a class="brand" href="https://by.kevingailey.com" style="font-color: #6dbac9;">by.KG</a>
           <div class="nav-collapse">
             <ul class="nav">
-            <li class="">
-              <a href="http://by.kevingailey.com/portfolio">portfolio</a>
-            </li>
 		  <li class="divider-vertical"></li>
               <li class="">
                 <a href="mailto:web@kevingailey.com">email</a>
