--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -41,11 +41,11 @@
             <ul class="nav">
 		  <li class="divider-vertical"></li>
               <li class="">
-                <a href="mailto:web@kevingailey.com">email</a>
+                <a href="mailto:web@kevingailey.com">send me an email</a>
               </li>
 			  <li class="divider-vertical"></li>
               <li class="">
-                <a href="http://twitter.com/kevingailey" target="_blank">twitter</a>
+                <a href="http://twitter.com/kevingailey" target="_blank">follow me on twitter</a>
               </li>	
 		
 			  <li class="divider-vertical"></li>
