--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -40,6 +40,14 @@
           <div class="nav-collapse">
             <ul class="nav">
 		  <li class="divider-vertical"></li>
+	        <li class="">
+	          <a href="https://by.kevingailey.com/2018/03/07/photogbykg.html" target="_blank">GradPics by.KG</a>
+	        </li>
+		  <li class="divider-vertical"></li>
+	        <li class="">
+	          <a href="https://by.kevingailey.com/2018/03/07/travelzbykg.html" target="_blank">Travel Pics by.KG</a>
+	        </li>
+				  <li class="divider-vertical"></li>
               <li class="">
                 <a href="mailto:web@kevingailey.com">send me an email</a>
               </li>
@@ -47,8 +55,11 @@
               <li class="">
                 <a href="http://twitter.com/kevingailey" target="_blank">follow me on twitter</a>
               </li>	
-		
-			  <li class="divider-vertical"></li>
+	  <li class="divider-vertical"></li>
+      <li class="">
+        <a href="https://by.kevingailey.com/contact">Hire KG</a>
+      </li>
+		  <li class="divider-vertical"></li>
              				  			  			 
              				  			               				  			  
             </ul>
