--- a/_layouts/newz.html
+++ b/_layouts/newz.html
@@ -4,7 +4,7 @@
 	{% include W5navbar.html %}
 
 <div class="container">	
-
+<h2>{{ post.title }}</h2>
 	<div class="marketing">
 	{{ content }}
 	</div>
