--- a/_layouts/newz.html
+++ b/_layouts/newz.html
@@ -4,8 +4,8 @@
 	{% include W5navbar.html %}
 
 <div class="container">	
-<h2>{{ post.title }}</h2>
 	<div class="marketing">
+	<h1>{{ title }}</h1>
 	{{ content }}
 	</div>
 
