--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -57,7 +57,7 @@
               </li>	
 	  <li class="divider-vertical"></li>
       <li class="">
-        <a href="https://by.kevingailey.com/contact">Hire KG</a>
+        <a href="mailto:photog@kevingailey.com">Hire KG</a>
       </li>
 		  <li class="divider-vertical"></li>
              				  			  			 
