config.yaml updates

--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -41,23 +41,23 @@
             <ul class="nav">
 		  <li class="divider-vertical"></li>
 	        <li class="">
-	          <a href="https://by.kevingailey.com/2018/03/07/photogbykg.html" target="_blank">GradPics by.KG</a>
+	          <a href="https://by.kevingailey.com/photogbykg.html" target="_blank">GradPics by.KG</a>
 	        </li>
 		  <li class="divider-vertical"></li>
 	        <li class="">
-	          <a href="https://by.kevingailey.com/2018/03/07/travelzbykg.html" target="_blank">Travel Pics by.KG</a>
+	          <a href="https://by.kevingailey.com/travelzbykg.html" target="_blank">Travel Pics by.KG</a>
 	        </li>
 				  <li class="divider-vertical"></li>
               <li class="">
-                <a href="mailto:web@kevingailey.com">send me an email</a>
+                <a href="https://by.kevingailey.com/instazbykg.html">Snaps by.KG</a>
               </li>
 			  <li class="divider-vertical"></li>
               <li class="">
-                <a href="http://twitter.com/kevingailey" target="_blank">follow me on twitter</a>
+                <a href="http://twitter.com/kevingailey" target="_blank">follow @KG</a>
               </li>	
 	  <li class="divider-vertical"></li>
       <li class="">
-        <a href="mailto:photog@kevingailey.com">Hire KG</a>
+        <a href="mailto:photog@kevingailey.com">Hire.KG</a>
       </li>
 		  <li class="divider-vertical"></li>
              				  			  			 
