--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -10,7 +10,9 @@
 	</div>
 
 
-	{% include javascript.html %}
 
   </body>
+  {% include footer.html %}	 
+  {% include javascript.html %}
+  
 </html>
