--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -49,7 +49,7 @@
 	        </li>
 				  <li class="divider-vertical"></li>
               <li class="">
-                <a href="https://by.kevingailey.com/instazbykg.html">Snaps by.KG</a>
+                <a href="https://instagram.com/snapsbykg">Snaps by.KG</a>
               </li>
 			  <li class="divider-vertical"></li>
               <li class="">
