url agnostic changes

--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -1,7 +1,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | Photography & More by.KG | Kevin Gailey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -41,11 +41,11 @@
             <ul class="nav">
 		  <li class="divider-vertical"></li>
 	        <li class="">
-	          <a href="https://by.kevingailey.com/photogbykg.html" target="_blank">GradPics by.KG</a>
+	          <a href="/photogbykg.html" target="_blank">GradPics by.KG</a>
 	        </li>
 		  <li class="divider-vertical"></li>
 	        <li class="">
-	          <a href="https://by.kevingailey.com/travelzbykg.html" target="_blank">Travel Pics by.KG</a>
+	          <a href="/travelzbykg.html" target="_blank">Travel Pics by.KG</a>
 	        </li>
 				  <li class="divider-vertical"></li>
               <li class="">
