verify no longer follow

--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -53,7 +53,7 @@
               </li>
 			  <li class="divider-vertical"></li>
               <li class="">
-                <a href="http://twitter.com/kevingailey" target="_blank">follow @KG</a>
+                <a href="http://keybase.io/kevingailey" target="_blank">Verify @KG</a>
               </li>	
 	  <li class="divider-vertical"></li>
       <li class="">
