--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="https://by.kevingailey.com" style="font-color: #6dbac9;">by.KG</a>
-          <div class="nav-collapse">
+          <div class="w5bar">
             <ul class="nav">
 		  <li class="divider-vertical"></li>
 	        <li class="">
