--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -293,7 +293,7 @@
     padding-top: 0;
   }
   .navbar-fixed-top {
-    position: static;
+    position: fixed;
     margin-bottom: 18px;
   }
   .navbar-fixed-top .navbar-inner {
