--- a/_includes/W5navbar.html
+++ b/_includes/W5navbar.html
@@ -28,16 +28,12 @@
 	        </li>
 		  <li class="divider-vertical"></li>
 	        <li class="">
-	          <a href="/travelzbykg.html" target="_blank">Travel Pics by.KG</a>
+	          <a href="/travelzbykg.html" target="_blank">Travels by.KG</a>
 	        </li>
 				  <li class="divider-vertical"></li>
               <li class="">
                 <a href="https://instagram.com/snapsbykg">Snaps by.KG</a>
               </li>	
-	  <li class="divider-vertical"></li>
-      <li class="">
-        <a href="mailto:photog@kevingailey.com">Hire.KG</a>
-      </li>
 		  <li class="divider-vertical"></li>
 
 
